2008-11-11  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktoolbar.[ch]: implement the GtkOrientable interface
	and deprecate gtk_toolbar_get,set_orientation().

	* gtk/gtk.symbols: changed accordingly.

2008-11-10  Marek Kasik  <mkasik@redhat.com>

	Bug 560135 - Print when the user double clicks a printer

	* gtk/gtkprintunixdialog.c: add handling of double click to
	GtkPrintUnixDialog.

2008-11-07  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkpaned.c: argh, actually call the newly added private
	gtk_paned_calc_position() instead of the deprecated public
	version.

2008-11-07  Michael Natterer  <mitch@imendio.com>

	Bug 553586 – Add orientation API to GtkPaned

	* gtk/gtkpaned.[ch]: implement the GtkOrientable interface
	and swallow all code from GtkHPaned and GtkVPaned. Add
	gtk_paned_new() which takes a GtkOrientation argument. Deprecate
	gtk_paned_compute_position() for good (also for GTK_COMPILATION).

	* gtk/gtkhpaned.[ch]
	* gtk/gtkvpaned.[ch]: remove all code except the constructor and
	call gtk_orientable_set_orientation() in init().

	* gtk/gtk.symbols: add gtk_box_new().

2008-11-07  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkcontainer.c (gtk_container_buildable_add_child):
	Check for child->parent instead of GTK_WIDGET_TOPLEVEL.

2008-11-07  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkscrollbar.c: remove bogus newlines in the middle of
	function calls, fix broken indentation and remove trailing
	whitespace.

2008-11-06  Tristan Van Berkom <tvb@gnome.org>

	* gtk/gtkmenuitem.c: Made buildable and added support for adding
	children of type "submenu"

	* gtk/gtkwindow.c: Added support for custom tag "accel-groups" to
	add GtkAccelGroups to the window.

	* gtk/gtkcontainer.c: Added builder contextual warnings in
	buildable_add_child()

	* gtk/tests/builder.c: Added tests for buildable menus (test that
	accelerators are properly connected on stock items, test the menu
	hierarchy, test permission to add alien/custom menuitem children).
