@@ -138,34 +138,33 @@ struct _GtkToolbarClass
   void (*_gtk_reserved3) (void);
 };
 
-GType           gtk_toolbar_get_type         (void) G_GNUC_CONST;
-GtkWidget*      gtk_toolbar_new                     (void);
+GType           gtk_toolbar_get_type                (void) G_GNUC_CONST;
+GtkWidget *     gtk_toolbar_new                     (void);
+
 void            gtk_toolbar_insert                  (GtkToolbar      *toolbar,
 						     GtkToolItem     *item,
 						     gint             pos);
+
 gint            gtk_toolbar_get_item_index          (GtkToolbar      *toolbar,
 						     GtkToolItem     *item);
 gint            gtk_toolbar_get_n_items             (GtkToolbar      *toolbar);
 GtkToolItem *   gtk_toolbar_get_nth_item            (GtkToolbar      *toolbar,
 						     gint             n);
+
 gboolean        gtk_toolbar_get_show_arrow          (GtkToolbar      *toolbar);
 void            gtk_toolbar_set_show_arrow          (GtkToolbar      *toolbar,
 						     gboolean         show_arrow);
-
-#ifndef GTK_DISABLE_DEPRECATED
-GtkOrientation  gtk_toolbar_get_orientation         (GtkToolbar      *toolbar);
-void            gtk_toolbar_set_orientation         (GtkToolbar      *toolbar,
-						     GtkOrientation   orientation);
-gboolean        gtk_toolbar_get_tooltips            (GtkToolbar      *toolbar);
-void            gtk_toolbar_set_tooltips            (GtkToolbar      *toolbar,
-						     gboolean         enable);
-#endif /* GTK_DISABLE_DEPRECATED */
 
 GtkToolbarStyle gtk_toolbar_get_style               (GtkToolbar      *toolbar);
 void            gtk_toolbar_set_style               (GtkToolbar      *toolbar,
 						     GtkToolbarStyle  style);
 void            gtk_toolbar_unset_style             (GtkToolbar      *toolbar);
+
 GtkIconSize     gtk_toolbar_get_icon_size           (GtkToolbar      *toolbar);
+void            gtk_toolbar_set_icon_size           (GtkToolbar      *toolbar,
+                                                     GtkIconSize      icon_size);
+void            gtk_toolbar_unset_icon_size         (GtkToolbar      *toolbar);
+
 GtkReliefStyle  gtk_toolbar_get_relief_style        (GtkToolbar      *toolbar);
 gint            gtk_toolbar_get_drop_index          (GtkToolbar      *toolbar,
 						     gint             x,
@@ -173,6 +172,7 @@ gint            gtk_toolbar_get_drop_index          (GtkToolbar      *toolbar,
 void            gtk_toolbar_set_drop_highlight_item (GtkToolbar      *toolbar,
 						     GtkToolItem     *tool_item,
 						     gint             index_);
+
 
 /* internal functions */
 gchar *         _gtk_toolbar_elide_underscores      (const gchar         *original);
@@ -183,11 +183,16 @@ void            _gtk_toolbar_paint_space_line       (GtkWidget           *widget
 gint            _gtk_toolbar_get_default_space_size (void);
 
 
-void       gtk_toolbar_set_icon_size   (GtkToolbar      *toolbar,
-				        GtkIconSize      icon_size);
-void       gtk_toolbar_unset_icon_size (GtkToolbar      *toolbar);
 
 #ifndef GTK_DISABLE_DEPRECATED
+
+GtkOrientation  gtk_toolbar_get_orientation         (GtkToolbar      *toolbar);
+void            gtk_toolbar_set_orientation         (GtkToolbar      *toolbar,
+						     GtkOrientation   orientation);
+gboolean        gtk_toolbar_get_tooltips            (GtkToolbar      *toolbar);
+void            gtk_toolbar_set_tooltips            (GtkToolbar      *toolbar,
+						     gboolean         enable);
+
 /* Simple button items */
 GtkWidget* gtk_toolbar_append_item   (GtkToolbar      *toolbar,
 				      const char      *text,
